objects/Support__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classifications__c</fullName>
        <label>Classifications</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Resolution__c</fullName>
        <label>Final Resolution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Responses__c</fullName>
        <label>Number of Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Threads__c</fullName>
        <label>Number of Threads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Name_Contact__c</fullName>
        <label>Org Name (Contact)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Support_Account__c</fullName>
        <label>Premium Support (Account)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time_in_Business_Hours__c</fullName>
        <label>Resolution Time in Business Hours</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Closed_Time__c</fullName>
        <label>Ticket Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Created_Time__c</fullName>
        <label>Ticket Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Id__c</fullName>
        <label>Ticket Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Owner__c</fullName>
        <label>Ticket Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Support</label>
    <nameField>
        <label>Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>